# inkread

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSES-3RDPARTY.md  README.md  SECURITY.md  build.gradle.kts  buildApk.sh  rust-toolchain.toml  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  commit-checks.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/plugins/hello.koplugin/: main.lua
app/src/main/java/dev/jraghavan/inkread/: AppSettings.kt  Bookmarks.kt  Books.kt  ColorPalette.kt  DailyActivity.kt  DailyAutoCompileWorker.kt  DailyController.kt  DeviceCapabilities.kt  DictController.kt  Dictionaries.kt  DigestController.kt  ExportController.kt  HomeActivity.kt  HttpFetch.kt  Ink.kt  InkStore.kt  NativeBridge.kt  PalmFilter.kt  ReaderActivity.kt  ReadingStats.kt  SearchController.kt  SelectionToolbar.kt  SettingsActivity.kt  ToolPalette.kt  UpdateController.kt  UpdateGate.kt  UpdateInstallReceiver.kt  UpdateVerify.kt  WordNet.kt
app/src/main/java/dev/jraghavan/inkread/eink/: EinkAdapter.kt  SupernoteEinkAdapter.kt  SupernoteInk.kt
app/src/main/res/drawable/: ic_inkwell.xml  ic_menu_adjust.xml  ic_menu_bookmark.xml  ic_menu_bookmark_filled.xml  ic_menu_contents.xml  ic_menu_crop.xml  ic_menu_dict.xml  ic_menu_display.xml  ic_menu_export.xml  ic_menu_fit.xml  ic_menu_font.xml  ic_menu_home.xml  ic_menu_library.xml  ic_menu_marks.xml  ic_menu_open.xml  ic_menu_page.xml  ic_menu_plugins.xml  ic_menu_rotate.xml  ic_menu_search.xml  ic_menu_zoom_in.xml  ic_menu_zoom_out.xml  ic_sel_all.xml  ic_sel_copy.xml  ic_sel_cut.xml  ic_sel_delete.xml  ic_sel_digest.xml  ic_sel_done.xml  ic_sel_paste.xml  ic_sel_redo.xml  ic_sel_undo.xml  ic_settings.xml  ic_tool_eraser.xml  ic_tool_handle.xml  ic_tool_highlighter.xml  ic_tool_lasso.xml  ic_tool_pen.xml  ink_dialog_bg.xml
app/src/main/res/values/: ic_launcher_background.xml  styles.xml
app/src/test/java/dev/jraghavan/inkread/: PalmFilterTest.kt  UpdateVerifyTest.kt
build-dict/: Cargo.toml
build-dict/src/: main.rs
device-eink/: Cargo.toml
device-eink/src/: capabilities.rs  command.rs  geometry.rs  lib.rs  mock_desktop.rs  policy.rs  wire.rs
device-eink/tests/: seam.rs
docs/: koreader-compatibility-matrix.md  spike-rr19-fr4b-pen-latency.md
inkread-daily/: Cargo.toml
inkread-daily/examples/: daily_cli.rs
inkread-daily/src/: epub.rs  epub_tests.rs  extract.rs  feed.rs  lib.rs  model.rs
inkread-dict/: Cargo.toml
inkread-dict/src/: engine.rs  import.rs  lib.rs  stardict.rs
inkread-epub/: Cargo.toml
inkread-epub/fonts/: NotoMusic-OFL.txt
inkread-epub/src/: content.rs  layout.rs  lib.rs  render.rs
inkread-ink/: Cargo.toml
inkread-ink/src/: codec.rs  lib.rs  model.rs  select.rs
inkread-ink/tests/: selection_ops.rs
inkread-lua/: Cargo.toml
inkread-lua/src/: lib.rs  services.rs
inkread-lua/src/koreader/: mod.rs  prelude.lua
inkread-lua/tests/: koreader_hello.rs
inkread-lua/tests/fixtures/hello.koplugin/: main.lua
inkread-pdftext/: Cargo.toml
inkread-pdftext/src/: lib.rs
inkread-update/: Cargo.toml
inkread-update/src/: lib.rs
reader-core/: Cargo.toml
reader-core/src/: dict.rs  error.rs  ink_wire.rs  jni.rs  lib.rs  session.rs  session_tests.rs
reader-core/src/budget/: mod.rs
reader-core/src/document/: format.rs  mod.rs  plain.rs  reflow.rs  reflow_view.rs  text_select.rs
reader-core/src/document/fixed/: cbz.rs  cbz_tests.rs  mod.rs  pdf.rs  pdf_tests.rs
reader-core/src/persistence/: identity.rs  ink_store.rs  mod.rs  pagination_cache.rs  sidecar.rs  sqlite.rs
reader-core/src/plugins/: mod.rs
reader-core/src/policy/: eink_policy.rs  eink_policy_tests.rs  mod.rs
reader-core/src/position/: mod.rs
reader-core/src/render/: cache.rs  contrast.rs  gray.rs  mod.rs  pixel_buffer.rs  resample.rs  viewport.rs
reader-core/src/settings/: mod.rs
reader-core/tests/fixtures/: sample.epub
reader-desktop/: Cargo.toml
reader-desktop/src/: main.rs
scripts/: check-licenses.sh  daily-preview.sh  gate.sh  stage-dict.sh
spike/: README.md  build.gradle.kts
spike/src/main/: AndroidManifest.xml
spike/src/main/cpp/: CMakeLists.txt  ebc_jni.c
spike/src/main/java/dev/jraghavan/inkread/penspike/: DrawServiceProbe.kt  EbcNative.kt  EinkManagerProbe.kt  LatencyStats.kt  PenSpikeActivity.kt  SupernoteInkProbe.kt
