[package]
name = "inkread-daily"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "inkread-daily (#66): turn feed/article sources into a self-contained daily-issue EPUB the inkread reader opens. Pure, host-testable assembly — fetching lives in the Android shell (IR-7)."

[dependencies]
# Writes the issue EPUB (a ZIP container). Already a workspace dependency (CBZ). Pure Rust,
# AGPL-compatible, cross-compiles clean.
zip = { workspace = true }
# RSS/Atom feed parsing (#66 fetch slice) — pure-Rust pull parser.
quick-xml = { workspace = true }
# Readability extraction parses article HTML with a real parser (html5ever) rather than a hand-rolled
# tag scanner — comments/CDATA/malformed nesting are handled correctly. Same crates inkread-epub uses.
scraper = { version = "0.27", default-features = false }
ego-tree = "0.11"
# JSON at the JNI boundary: the shell hands the core a fetched issue (sources + article HTML) as JSON.
serde = { workspace = true }
serde_json = { workspace = true }
feed-rs = "2.3.1"

[dev-dependencies]
# Round-trip the assembled issue through the real EPUB parser the reader uses, so a malformed
# container fails the host gate rather than the device.
inkread-epub = { workspace = true }
