[package]
name = "reader-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Host dev harness (RR1-FR1): opens a PDF, turns N pages, and prints the RefreshCommand stream the policy emits via the mock_desktop recorder. No Android SDK, no device."

[[bin]]
name = "reader-desktop"
path = "src/main.rs"

[dependencies]
device-eink = { workspace = true }
# The core's lib target is named `reader` (→ `libreader.so` for the Android
# `System.loadLibrary("reader")` seam). Rename the extern crate back to `reader_core`
# here so the host harness keeps importing it as `reader_core::…` (the package's
# logical name). Renamed deps can't use workspace inheritance, so pin the path directly.
reader_core = { path = "../reader-core", package = "reader-core" }
